Implementation of password recovery, personal data editing, and other minor improvements
