# src/main/java/com/mishchuk/onlineschool/controller/dto/ForgotPasswordRequest.java
@@ -1,0 +1,8 @@
+package com.mishchuk.onlineschool.controller.dto;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+
+public record ForgotPasswordRequest(
+        @NotBlank(message = "Email is required") @Email(message = "Invalid email format") String email) {
+}
