# src/main/java/com/mishchuk/onlineschool/controller/dto/ResetPasswordRequest.java
@@ -1,0 +1,10 @@
+package com.mishchuk.onlineschool.controller.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+
+public record ResetPasswordRequest(
+        @NotBlank(message = "Token is required") String token,
+
+        @NotBlank(message = "New password is required") @Size(min = 6, message = "Password must be at least 6 characters long") String newPassword) {
+}
